--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,18 +30,33 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.firebase:firebase-analytics:17.2.1'
-    implementation 'com.google.firebase:firebase-auth:19.1.0'
-    implementation 'com.google.firebase:firebase-firestore:21.2.1'
+
     implementation 'com.android.support:multidex:1.0.3'
 
-}
-dependencies {
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.google.firebase:firebase-firestore:21.2.1'
+
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
 
 }
 
+
+repositories {
+    maven {
+        url "http://maven.google.com/"
+    }
+}
 dependencies {
-    implementation 'com.google.firebase:firebase-auth:16.0.5'
+
+
+    // Основная библиотека MapKit.
+    implementation 'com.yandex.android:mapkit:3.4.0'
+
+    // Дополнительные модули MapKit.
+    // Удалите зависимости если ваше приложение не использует их.
+
 }
+
