--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,29 @@ dependencies {
     // Основная библиотека MapKit.
     implementation 'com.yandex.android:mapkit:3.4.0'
 
+
+
     // Дополнительные модули MapKit.
     // Удалите зависимости если ваше приложение не использует их.
 
+}
+
+dependencies {
+    def work_version = "2.2.0"
+
+    // (Java only)
+    implementation "androidx.work:work-runtime:$work_version"
+
+    // Kotlin + coroutines
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+
+    // optional - RxJava2 support
+    implementation "androidx.work:work-rxjava2:$work_version"
+
+    // optional - GCMNetworkManager support
+    implementation "androidx.work:work-gcm:$work_version"
+
+    // optional - Test helpers
+    androidTestImplementation "androidx.work:work-testing:$work_version"
 }
 
