--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,6 @@ dependencies {
     implementation 'com.yandex.android:mapkit:3.4.0'
 
 
-
     // Дополнительные модули MapKit.
     // Удалите зависимости если ваше приложение не использует их.
 
@@ -82,3 +81,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.0.1'
 }
 
+dependencies {
+    implementation 'androidx.appcompat:appcompat:+'
+    implementation 'androidx.constraintlayout:constraintlayout:+'
+
+
+    
+}
