--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".testActivity"></activity>
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -33,18 +32,18 @@
             android:resource="@color/colorAccent" />
 
         <service
-            android:name=".gpsService"
+            android:name=".services.gpsService"
             android:enabled="true"
             android:exported="true" />
 
-        <receiver android:name=".AlarmReceiver">
+        <receiver android:name=".services.AlarmReceiver">
             <intent-filter>
                 <action android:name="com.ilocator.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
         <service
-            android:name=".MyFirebaseMessagingService"
+            android:name=".services.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
@@ -59,7 +58,7 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <activity
-            android:name=".MapsActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -68,7 +67,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".UsersActivity"
+            android:name=".activity.UsersActivity"
             android:label="login" />
     </application>
 
