--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,13 +81,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.0.1'
 }
 
-dependencies {
-    implementation 'androidx.appcompat:appcompat:+'
-    implementation 'androidx.constraintlayout:constraintlayout:+'
 
-
-}
 
 dependencies {
-    implementation 'androidx.legacy:legacy-support-v4:+'
+
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
 }
