--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,3 +87,16 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.1.0-alpha10'
 }
+
+dependencies {
+    def nav_version = "2.1.0"
+
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+}
