-add chat room activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,10 @@
         <activity
             android:name=".activities.UsersActivity"
             android:label="login" />
+
+        <activity
+            android:name=".activities.ChatRoomActivity"
+            android:label="chat_room" />
     </application>
 
 </manifest>
