--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,22 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-
-     android:name=".utils.MyApplication"
-
-
+        android:name=".utils.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+        <activity
+            android:name=".activities.NewMessageActivity"
+            android:label="@string/title_activity_new_message"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_stat_ic_notification" />
@@ -73,7 +78,6 @@
         <activity
             android:name=".activities.UsersActivity"
             android:label="login" />
-
         <activity
             android:name=".activities.ChatRoomActivity"
             android:label="chat_room" />
