-fix button send message

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,4 +101,5 @@ dependencies {
     implementation 'com.google.android.material:material:+'
     implementation 'androidx.constraintlayout:constraintlayout:+'
     implementation 'androidx.lifecycle:lifecycle-extensions:+'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
